--- a/public/stylesheets/search-filter.css
+++ b/public/stylesheets/search-filter.css
@@ -8,7 +8,7 @@ body {
     max-width:1536px;
     width:100%;
     height: auto;
-    margin-top:10px;
+    margin-top:53px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -82,7 +82,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  border-radius: 35px;
+  border-radius:5px;
   margin-top:10px;
   
 }
@@ -303,6 +303,7 @@ input[type="search"]::-webkit-search-cancel-button  {
   color: #2F3B43;
   opacity: 0.7;
   margin-top: 15px;
+  cursor: pointer;
 }
 
 .price-dropdown, .area-dropdown {
